# BMSTU-AA

./: README.md
lab_1/: CMakeLists.txt  iu7-algan-cicd-student.mk
lab_1/code/: algo.cpp  algo.h  data_generator.cpp  data_generator.h  main.cpp  tables.py  time_measures.cpp  time_measures.h  unit_tests.cpp
lab_1/report/chapters/: analytic.tex  conclusion.tex  design.tex  intro.tex  lib.bib  preambula.tex  research.tex  tech.tex  title.tex
lab_2/: CMakeLists.txt  iu7-algan-cicd-student.mk
lab_2/code/: algo.cpp  algo.h  comparisons_measures.cpp  comparisons_measures.h  data_generator.cpp  data_generator.h  main.cpp  plots.py  unit_tests.cpp
lab_2/report/: report.tex
lab_2/report/chapters/: analytic.tex  bibliography.tex  conclusion.tex  design.tex  intro.tex  lib.bib  preambula.tex  research.tex  tech.tex  title.tex
lab_3/: CMakeLists.txt
lab_3/code/: algo.cpp  algo.h  data_generator.cpp  data_generator.h  main.cpp  plots.py  times_measures.cpp  times_measures.h  unit_tests.cpp
lab_4/: CMakeLists.txt
lab_4/code/: algo.cpp  algo.h  main.cpp  main.py  time_measures.cpp  time_measures.h
lab_4/report/chapters/: conclusion.tex  content.tex  intro.tex  lib.bib  title.tex
lab_5/: CMakeLists.txt  iu7-algan-cicd-student.mk
lab_5/code/: algo.cpp  algo.h  main.cpp  main.py  task_dto.cpp  task_dto.h  task_queue.h  tasks.cpp  tasks.h  time_measures.cpp  time_measures.h
lab_5/report/: report.tex
lab_5/report/chapters/: conclusion.tex  content.tex  intro.tex  lib.bib  preambula.tex  title.tex
lab_6/: CMakeLists.txt  africa_generator.py  africa_graph_generator.py  graph_analyse.py  graph_generator.py  iu7-algan-cicd-student.mk  kek.py
lab_6/code/: algo.cpp  algo.h  main.cpp  parametrize.cpp  parametrize.h  plots.py  time_meaures.cpp  time_meaures.h  unit_tests.cpp
lab_6/report/: report-addonA.tex
lab_6/report/chapters/: analytic.tex  bibliography.tex  conclusion.tex  design.tex  intro.tex  lib.bib  research.tex  tech.tex  title.tex
